--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>NeuroMesh: A Unified Neural Inference Framework for Decentralized\\ Multi-Robot Collaborative Learning</title>
+  <title>NeuroMesh: A Unified Neural Inference Framework for Decentralized Multi-Robot Collaborative Learning</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">NeuroMesh: A Unified Neural Inference Framework for Decentralized\\ Multi-Robot Collaborative Learning</h1>
+            <h1 class="title is-1 publication-title">NeuroMesh: A Unified Neural Inference Framework for Decentralized Multi-Robot Collaborative Learning</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -61,11 +61,13 @@
                 </span>
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Yash Shetye</a><sup>1*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Devon Super</a><sup>2*</sup>,</span>
-                  <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Long Quang</a><sup>1,3</sup>,</span>
                   <span class="author-block">
+                    <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Devon Super</a><sup>2*</sup>,</span>
+                  <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jesse Milzman</a><sup>3</sup>,</span>
+                  <span class="author-block">
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Manohari Goarin</a><sup>1</sup>,</span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Aditya Azad</a><sup>1</sup>,</span>
                   <span class="author-block">
