--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">Conferance name and year</span>
-                    <span class="author-block"><small><br><sup>1</sup>The authors are with New York University, New York, USA. email: {yangzhou, ys5153, lq2146, aa10878, dsd9855, jm7752, loiannog}@nyu.edu.</small></span>
+                    <span class="author-block"><small><br><sup>1</sup>The authors are with New York University, New York, USA. email: {yangzhou, ys5153, lq2146, mg7363, aa10878, dsd9855, jm7752, loiannog}@nyu.edu.</small></span>
                     <span class="author-block"><small><br><sup>2</sup>The author is with Vanderbilt University, Tennessee, USA. email: devon.a.super@vanderbilt.edu.</small></span>
                     <span class="author-block"><small><br><sup>3</sup>The authors are with U.S. Army Combat Capabilities Development Command, Army Research Laboratory, Adelphi, MD 20783, USA. email: {long.p.quang.civ, jesse.m.milzman.civ, carlos.p.nieto2.civ}@army.mil.</small></span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
