--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <span class="author-block">
                   <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Yang Zhou</a><sup>1</sup>,</span>
                 </span>
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Yash Shetye</a><sup>1*</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Yash Shetye</a><sup>1</sup>,</span>
                 <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Long Quang</a><sup>1,3</sup>,</span>
                   <span class="author-block">
-                    <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Devon Super</a><sup>2*</sup>,</span>
+                    <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Devon Super</a><sup>2</sup>,</span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jesse Milzman</a><sup>3</sup>,</span>
                   <span class="author-block">
@@ -85,7 +85,6 @@
                     <span class="author-block"><small><br><sup>1</sup>The authors are with New York University, New York, USA. email: {yangzhou, ys5153, lq2146, mg7363, aa10878, dsd9855, jm7752, loiannog}@nyu.edu.</small></span>
                     <span class="author-block"><small><br><sup>2</sup>The author is with Vanderbilt University, Tennessee, USA. email: devon.a.super@vanderbilt.edu.</small></span>
                     <span class="author-block"><small><br><sup>3</sup>The authors are with U.S. Army Combat Capabilities Development Command, Army Research Laboratory, Adelphi, MD 20783, USA. email: {long.p.quang.civ, jesse.m.milzman.civ, carlos.p.nieto2.civ}@army.mil.</small></span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
                   <div class="column has-text-centered">
